--- a/bloodproject/templates/bloodapp/blood_test_form.html
+++ b/bloodproject/templates/bloodapp/blood_test_form.html
@@ -3,10 +3,20 @@
 {% block title %}Submit Blood Test{% endblock %}
 
 {% block content %}
-<h1>Submit Your Blood Test Results</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-</form>
+<div class="row justify-content-center">
+  <div class="col-md-8 col-lg-6">
+    <div class="card shadow-sm border-0 mt-4">
+      <div class="card-body">
+        <h1 class="card-title mb-4" style="color: #2e5e4e;">Submit Your Blood Test Results</h1>
+        <form method="post">
+          {% csrf_token %}
+          <div class="mb-3">
+            {{ form.as_p|safe }}
+          </div>
+          <button type="submit" class="btn btn-success w-100" style="background: #2e5e4e; border: none;">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
